# smartfusion_bootloader

./: .gdbinit  .gitmodules  README.md  flasher.py
app/: CMakeLists.txt  bin2c.py  linkerscript.ld
app/src/: bootloader.S  main.c
bootloader/: CMakeLists.txt  linkerscript.ld  pad-bootloader.py
bootloader/inc/: bootloader.h  common.h  comms.h  led.h  ring-buffer.h  simple-sw-timer.h  sys-time.h  uart.h
bootloader/src/: bootloader.c  comms.c  led.c  main.c  ring-buffer.c  simple-sw-timer.c  sys-time.c  uart.c
firmware/: CMakeLists.txt.old  README.txt
tools/: pad-bin.py
